[package]
name = "fastly-template-rust-default"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.5.0"
webp = { path = "vendor/webp", version = "0.1.1", default-features = false }
jpeg-decoder = { version = "0.1.22", default-features = false }
